<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="64dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_amount_of_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#2B3D4D"
            tools:text="2.5" />

    </FrameLayout>

    <ImageView
        android:id="@+id/iv_line_seperator_ingredient_item_list"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_measure_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            tools:text="CUPS OF" />

        <TextView
            android:id="@+id/txt_name_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="Milk" />

    </LinearLayout>





</LinearLayout>