<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.bakingapps.Activity.RecipeStepDetailActivity">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/expv_recipe_step"
            android:layout_width="0dp"
            android:layout_height="215dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_recipe_step_image"
            android:src="@drawable/ic_error_outline_black_48dp"
            android:layout_width="0dp"
            android:layout_height="215dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_previous_recipe_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="@string/previous_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_next_recipe_step" />

        <Button
            android:id="@+id/btn_next_recipe_step"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="@string/next_button_label"
            app:layout_constraintLeft_toRightOf="@+id/btn_previous_recipe_step"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_previous_recipe_step" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next_recipe_step"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expv_recipe_step">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_recipe_step_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Prep the cookie crust" />

                <TextView
                    android:id="@+id/txt_recipe_step_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="0dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipe_step_name"
                    tools:text="Step 2" />

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_recipe_step_number"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txt_recipe_step_description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:text="2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed."
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                    </android.support.constraint.ConstraintLayout>
                </ScrollView>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</layout>
